Bring everything to a roughly finished state

--- a/Geovispaper/geovis-boilerplate.tex
+++ b/Geovispaper/geovis-boilerplate.tex
@@ -52,6 +52,10 @@
 \usepackage{outlines}
 \usepackage{cleveref}
 \usepackage{tabulary}
+\usepackage{pbox}
+\usepackage[labelfont=bf,font=bf,skip=3pt]{caption}
+% \captionsetup[figure]{labelfont=bf}
+
 
 \begin{document}
 
